@@ -1,7 +1,12 @@
+const path = require("path");
+
 /** @type {import("next").NextConfig} */
 const nextConfig = {
-  /* config options here */
+  webpack(config) {
+    config.resolve.alias["@"] = path.resolve(__dirname, "src");
+    return config;
+  },
 };
 
-export default nextConfig;
+module.exports = nextConfig;
 
